changes in photos

--- a/prototype.html
+++ b/prototype.html
@@ -14,7 +14,7 @@
 
     <header class="sub-page-header">
         <div class="container">
-            <a href="portfolio.html" class="back-btn">&larr; Back to Portfolio</a>
+            <a href="index.html" class="back-btn">&larr; Back to Portfolio</a>
             <h1>My Prototypes</h1>
         </div>
     </header>
