--- a/wireframe.html
+++ b/wireframe.html
@@ -33,9 +33,9 @@
                     <h3>Digital Wireframes</h3>
                     <p>These wireframes illustrate the more refined stages of design, focusing on detailed layout, information hierarchy, and interactive elements created using professional tools.</p>
                     <div class="wireframe-gallery">
-                        <img src="digwire.png" alt="Digital Wireframe Example 1">
+                        <img src="digwire.jpg" alt="Digital Wireframe Example 1">
                         <img src="digwire1.jpg" alt="Digital Wireframe Example 2">
-                        <img src="images/digital_wireframe_3.jpg" alt="Digital Wireframe Example 3">
+                        <img src="digwire2.jpg" alt="Digital Wireframe Example 3">
                         </div>
                     <div class="wireframe-context">
                         <h4>Project Context: [Project Name A]</h4>
