image popping effect in javascript

--- a/prototype.html
+++ b/prototype.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <div class="initial-animation-overlay"></div>
+    <!-- Lightbox Overlay -->
+    <div class="lightbox-overlay" id="lightbox">
+       <img src="" alt="Enlarged image">
+    </div>
 
     <header class="sub-page-header">
         <div class="container">
@@ -33,9 +37,9 @@
                     <h3>Lo-fi Prototypes</h3>
                     <p>These wireframes illustrate the more refined stages of design, focusing on detailed layout, information hierarchy, and interactive elements created using professional tools.</p>
                     <div class="wireframe-gallery">
-                        <img src="digwire.png" >
-                        <img src="images/digital_wireframe_2.jpg">
-                        <img src="images/digital_wireframe_3.jpg">
+                        <img src="digwire.png" class="clickable">
+                        <img src="images/digital_wireframe_2.jpg" class="clickable">
+                        <img src="images/digital_wireframe_3.jpg" class="clickable">
                         </div>
                     <div class="wireframe-context">
                         <h4>Project Context: [Project Name A]</h4>
@@ -47,9 +51,9 @@
                     <h3>Hi-fi Prototypes</h3>
                     <p>My hand-drawn wireframes represent the initial brainstorming and rapid ideation phases. They help in quickly visualizing concepts and flows before moving to digital tools.</p>
                     <div class="wireframe-gallery">
-                        <img src="wire1.jpg" >
-                        <img src="wire2.jpg" >
-                        <img src="images/hand_drawn_wireframe_3.jpg" >
+                        <img src="wire1.jpg" class="clickable">
+                        <img src="wire2.jpg" class="clickable">
+                        <img src="images/hand_drawn_wireframe_3.jpg" class="clickable">
                         </div>
                     <div class="wireframe-context">
                         <h4>Project Context: [Project Name B]</h4>
@@ -111,6 +115,24 @@
             document.getElementById(tabName).style.display = "block";
             evt.currentTarget.className += " active";
         }
+         // Lightbox functionality
+document.addEventListener('DOMContentLoaded', () => {
+    const lightbox = document.getElementById('lightbox');
+    const lightboxImg = lightbox.querySelector('img');
+    const images = document.querySelectorAll('.clickable');
+
+    images.forEach(img => {
+        img.addEventListener('click', () => {
+            lightboxImg.src = img.src;
+            lightbox.classList.add('show');
+        });
+    });
+
+    lightbox.addEventListener('click', () => {
+        lightbox.classList.remove('show');
+        lightboxImg.src = '';
+    });
+});
 
         // Set the default active tab when the page loads
         document.addEventListener('DOMContentLoaded', (event) => {
