Changes in images and text

--- a/prototype.html
+++ b/prototype.html
@@ -35,29 +35,27 @@
 
                 <div id="low" class="tab-content active">
                     <h3>Lo-fi Prototypes</h3>
-                    <p>These wireframes illustrate the more refined stages of design, focusing on detailed layout, information hierarchy, and interactive elements created using professional tools.</p>
+                    <p>Low-fidelity (Lo-fi) prototypes are simplified versions of a design used to test ideas quickly and cheaply. They focus on structure and functionality rather than aesthetics, making them ideal for early-stage UX design.</p>
+                    <h5><center> Click on the image below</center></h5>
                     <div class="wireframe-gallery">
-                        <img src="digwire.png" class="clickable">
-                        <img src="images/digital_wireframe_2.jpg" class="clickable">
-                        <img src="images/digital_wireframe_3.jpg" class="clickable">
+                        <img src="lib.jpg" class="clickable">
                         </div>
                     <div class="wireframe-context">
-                        <h4>Project Context: [Project Name A]</h4>
-                        <p>These digital wireframes were part of a project to redesign a mobile banking application. The goal was to simplify the transfer process and improve account overview accessibility. I focused on intuitive navigation and clear visual hierarchy.</p>
+                        <h4>Project Context: Library Store</h4>
+                        <p>This low-fidelity prototype represents the user flow for a bookstore/library app, focusing on navigation, order placement, and checkout.The prototype outlines a structured book-shopping experience, enabling users to browse, select, and purchase books seamlessly.</p>
                     </div>
                 </div>
 
                 <div id="high" class="tab-content">
                     <h3>Hi-fi Prototypes</h3>
-                    <p>My hand-drawn wireframes represent the initial brainstorming and rapid ideation phases. They help in quickly visualizing concepts and flows before moving to digital tools.</p>
+                    <p>High-fidelity (Hi-fi) prototypes are detailed, interactive representations of a final product, closely resembling the real user experience.</p>
+                    <h5><center> Click on the image below</center></h5>
                     <div class="wireframe-gallery">
-                        <img src="wire1.jpg" class="clickable">
-                        <img src="wire2.jpg" class="clickable">
-                        <img src="images/hand_drawn_wireframe_3.jpg" class="clickable">
+                        <img src="museum.png" class="clickable">
                         </div>
                     <div class="wireframe-context">
-                        <h4>Project Context: [Project Name B]</h4>
-                        <p>These sketches were used during the early discovery phase for a new online learning platform. We explored various user flows for course enrollment and content consumption, prioritizing speed and flexibility in concept generation.</p>
+                        <h4>Project Context: Museum Event Booking</h4>
+                        <p>The Museum Booker App allows users to browse, schedule, and book tickets for museum events effortlessly. The interface is designed with a clean, modern aesthetic, ensuring an accessible and engaging experience.</p>
                     </div>
                 </div>
             </div>
