--- a/wireframe.html
+++ b/wireframe.html
@@ -37,6 +37,7 @@
                 <div id="digital" class="tab-content active">
                     <h3>Digital Wireframes</h3>
                     <p>These wireframes illustrate the more refined stages of design, focusing on detailed layout, information hierarchy, and interactive elements created using professional tools.</p>
+                    <h5><center> Click on the image below</center></h5>
                     <div class="wireframe-gallery">
                         <img src="digwire.jpg" alt="Digital Wireframe Example 1" class="clickable">
                         <img src="digwire1.jpg" alt="Digital Wireframe Example 2" class="clickable">
@@ -51,6 +52,7 @@
                 <div id="hand-drawn" class="tab-content">
                     <h3>Hand-Drawn Wireframes</h3>
                     <p>My hand-drawn wireframes represent the initial brainstorming and rapid ideation phases. They help in quickly visualizing concepts and flows before moving to digital tools.</p>
+                    <h5><center> Click on the image below</center></h5>
                     <div class="wireframe-gallery">
                         <img src="wire1.jpg" alt="Hand-Drawn Wireframe Example 1" class="clickable">
                         <img src="wire2.jpg" alt="Hand-Drawn Wireframe Example 2" class="clickable">
