--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                     
                     <div class="space-y-6">
                         <p>
-                            I am a passionate <span class="text-indigo-400">UX Designer</span> with a strong foundation in MCA and certified through the **Google UX Design Professional Certification**. My expertise lies in transforming complex problems into smooth, user-friendly digital experiences through research-driven design processes.
+                            I am a passionate <span class="text-indigo-400">UX Designer</span> with a strong foundation in MCA and certified through the Google UX Design Professional Certification. My expertise lies in transforming complex problems into smooth, user-friendly digital experiences through research-driven design processes.
                         </p>
                         <p>
                             I focus intensely on <span class="text-indigo-400">wireframing, high-fidelity prototyping, usability testing, and information architecture</span>—bringing clarity and purpose to every interaction. My design approach combines creativity, empathy, and logical structure to craft interfaces that users not only understand but also enjoy using.
@@ -438,9 +438,9 @@
                         <ul class="list-disc list-inside text-gray-300 space-y-2 ml-4">
                             <li>User Research & Testing</li>
                             <li>Information Architecture & Interaction Design (IxD)</li>
-                            <li>Wireframing & Prototyping (**Figma**)</li>
-                            <li>**Front-End Prototyping (HTML5/Tailwind CSS)**</li>
-                            <li>**Responsive Web Development**</li>
+                            <li>Wireframing & Prototyping (Figma)</li>
+                            <li>Front-End Prototyping (HTML5/Tailwind CSS)</li>
+                            <li>Responsive Web Development</li>
                             <li>Design Systems & Usability Testing</li>
                         </ul>
                     </div>
